<resources>
    <string name="app_name">Ganjify</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="login_app_name">Ganjify</string>
    <string name="login_slogan">Pour arreter la cigarette</string>
    <string name="login_button_text">Start medicating</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

    <string name="signup_fullname">Full Name</string>
    <string name="signup_email">Email Adress</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_button_text">Sign up</string>

    <string name="title_activity_feed">FeedActivity</string>

    <string name="feed_tmp">captainSpliff a fumé un gros cône avec Jeflow Dumbledof</string>
    <string name="feed_time">Feb 20, 2016, 5:13:55 PM</string>
    <string name="feed_comment">« Tirez le meilleur parti du chanvre indien et plantez-en partout. » - George Washington</string>
    <string name="feed_post_who">Qui fume ce pet avec toi ?</string>
    <string name="feed_post_commentaire">Un commentaire ?</string>
    <string name="feed_post_validate_pet">Cramme un gramme !</string>
    <string name="feed_post_validate_douille">Hits from the bong</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_post">FeedPostActivity</string>

</resources>
