<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/login_background_box">


        <fr.do_f.ganjify.utils.fonts.TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_app_name"
            android:textColor="@color/login_title"
            android:textSize="60sp"/>

        <EditText
            android:id="@+id/signup_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/signup_fullname"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_email"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_username"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/signup_password"
            android:password="true"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_background_button"
            android:textColor="@color/white"
            android:text="@string/signup_button_text"/>

    </LinearLayout>
</RelativeLayout>
