<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/feed_post_cannabis_leaf"/>

        <fr.do_f.ganjify.utils.fonts.TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_app_name"
            android:textColor="@color/white"
            android:textSize="60sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/feed_post_background_box">

        <ImageView
            android:id="@+id/feed_post_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/feed_type_spliff"/>

        <LinearLayout
            android:id="@+id/feed_post_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <fr.do_f.ganjify.utils.fonts.TextView
                android:id="@+id/feed_post_autocomplete_text"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/feed_post_autocomplete"/>

        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/feed_post_who"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/feed_post_who"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:textColor="@color/nav_background"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/feed_post_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:layout_marginTop="10dp"
            android:hint="@string/feed_post_commentaire"
            android:background="@drawable/login_background_edittext"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/feed_post_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_background_button"
            android:textColor="@color/white"
            android:text="@string/feed_post_validate_pet"/>

    </LinearLayout>
</RelativeLayout>

