<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@drawable/login_background_box">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ganjify_logo"/>

        <fr.do_f.ganjify.utils.fonts.TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_app_name"
            android:textColor="@color/login_title"
            android:textSize="60sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/login_slogan"
            android:textSize="21sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/login_separator"/>


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_email"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/login_password"
            android:background="@drawable/login_background_edittext"
            android:singleLine="true"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_background_button"
            android:textColor="@color/white"
            android:text="@string/login_button_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_loading"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <fr.do_f.ganjify.utils.fonts.TextView
            android:id="@+id/loading_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_app_name"
            android:textColor="@color/login_title"
            android:textSize="90sp"
            android:alpha="0"/>

        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loading_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/loading_1_marijuana_planting"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/loading_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/loading_2_marijuana_plantation"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/loading_3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/loading_3_marijuana_plants"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/loading_4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/loading_4_weighing_the_marijuana"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/loading_5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/loading_5_marijuana_leaf"
                android:alpha="0"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
